moving towards a home page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,61 @@
 layout: default
 ---
 
-<div class="home">
 
-  <h1 class="page-heading">Kunesh says hi</h1>
-<p>tonight the internet let me down.</p>
+<link href='http://fonts.googleapis.com/css?family=Arvo:regular,bold,italic' rel='stylesheet' type='text/css'>
+
+
+<style>
+body {
+	font-size:1em;
+}
+	h1 { font-family: 'Arvo', arial, serif; font-weight: bold;
+	font-size:6em;
+	line-height:.8em;
+	}
+	
+	h1 #bigcopy {
+		letter-spacing:.09em;
+	}
+	
+	h1 a {text-decoration: none;}
+	
+	br {margin:0;}
+	.smalltype {
+		font-size:.25em;
+		line-height:.125em;
+		font-weight: normal;
+		font-style: italic; 
+		
+	}
+	
+	h2, h3 {
+	font-family: 'Arvo', arial, serif;
+	font-weight: normal;
+	font-size:2em;
+	line-height:1em; }
+
+	.home {margin:1em 4em;}
+	
+	footer {
+		margin: 0 auto;
+	}
+	
+	#container {
+		min-width:66%;
+		max-width:33%;
+	}
+	
+	
+    /* jekyll style overrides */
+    
+    .icon {width:10%;}
+    
+</style>
+<div class="home">
+<h1 class="page-heading"></h1>
+<h3>tonight the internet let us down</h3>
+
 
 <!--//
 
