decent enough to ship for the night

--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@ body {
     
 </style>
 <div class="home">
-<h1 class="page-heading"></h1>
-<h3>tonight the internet let us down</h3>
 
+        <p>{{ site.description }}</p>
 
 <!--//
 
