--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 layout: default
 ---
 
-
-<div class="home">
-
-        <p>{{ site.description }}</p>
-<p>There's not much going on here now. You should <a href="https://twitter.com/intent/follow?screen_name=@jdkunesh">follow @jdkunesh</a> on Twitter until that changes.</p>
+<!-- class="home" -->
+<div>
+<p>Hi. Thanks for visiting.</p>
+<p>{{ site.description }}</p>
+<p>There's not much going on here at the moment.</p>
+<p><a href="https://twitter.com/intent/follow?screen_name=@jdkunesh">Follow @jdkunesh</a> on Twitter for updates.</p>
 <p>Have a great day!</p>
 {% comment %}
 <!--//
