minor copy tightening

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ layout: default
 
 <!-- class="home" -->
 <div>
-<p>Hi. Thanks for visiting.</p>
 <p>{{ site.description }}</p>
-<p>There's not much going on here at the moment.</p>
+<p>There's not much here at the moment.</p>
 <p><a href="https://twitter.com/intent/follow?screen_name=@jdkunesh">Follow @jdkunesh</a> on Twitter for updates.</p>
 <p>Have a great day!</p>
 {% comment %}
