--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@ layout: default
 
 <p>I design products to move humanity forward.</p>
 
-<p>Past projects <a href="https://publicgood.com" title="Public Good Software">empower a new generation to connect with nonprofits through the media</a>, <a href="https://www.barackobama.com" title="Obama for America 2012">re-elect the President of the United States</a>, and <a href="https://www.healthvault.com/us/en" title="Mayo Clinic Health Manager by Microsoft">help families raise healthy</a>, <a href="http://www.leapfrog.com/en-us/home" title="LeapFrog educational toys">smart children</a> in <a href="http://dalailamacenter.org/heart-mind-2013-helping-children-thrive/test-landing-page/about-heart-mind-conference" title="Dalai Lama Center &amp; UX for Good">empathy-driven</a> <a href="http://www.cutgroup.org" title="Smaert Chicago Civic Usability Testing Group">civic institutions</a>. I've also helped you buy <a href="https://www.orbitz.com" title="Orbitz">airline tickets</a>, <a href="https://www.groupon.com/" title="Groupon">spa days</a>, <a href="https://www.threadless.com" title="Threadless">t-shirts</a>, and <a href="https://www.fieldmuseum.org" title="The Field Museum">museum memberships</a>.</p>
+<p>Currently, I'm elevating operations with <a href="https://catalytic.com/">Catalytic</a>.</p>
+
+<p>I've been fortunate to <a href="https://publicgood.com" title="Public Good Software">empower a new generation to connect with nonprofits through the media</a>, <a href="https://www.barackobama.com" title="Obama for America 2012">re-elect the President of the United States</a>, and <a href="https://www.healthvault.com/us/en" title="Mayo Clinic Health Manager by Microsoft">help families raise healthy</a>, <a href="http://www.leapfrog.com/en-us/home" title="LeapFrog educational toys">smart children</a> in <a href="http://dalailamacenter.org/heart-mind-2013-helping-children-thrive/test-landing-page/about-heart-mind-conference" title="Dalai Lama Center &amp; UX for Good">empathy-driven</a> <a href="http://www.cutgroup.org" title="Smaert Chicago Civic Usability Testing Group">civic institutions</a>. I've also helped you buy <a href="https://www.orbitz.com" title="Orbitz">airline tickets</a>, <a href="https://www.groupon.com/" title="Groupon">spa days</a>, <a href="https://www.threadless.com" title="Threadless">t-shirts</a>, and <a href="https://www.fieldmuseum.org" title="The Field Museum">museum memberships</a>.</p>
 <p>I've founded companies, disrupted industries, and taught at universities. I've bullshitted in board rooms, sung for my supper, and bounced at bars.</p>
 <p>I'm at my best when rolling up my sleeves with high performing teams to find simple, people-centered technology solutions to intractable problems at scale.</p>
-<p><a href="https://twitter.com/intent/follow?screen_name=@jdkunesh">Follow @jdkunesh</a> on Twitter for updates.</p>
+<p><a href="https://twitter.com/jdkunesh">Follow me on Twitter</a> for updates.</p>
 
+{% comment %}
+
+// note: invite people to connect thru one of the platforms below
+<p>
+<a href="http://www.twitter.com/jdkunesh/" title="">Twitter</a></li>
+<a href="http://www.linkedin.com/in/jasonkunesh/" title="">LinkedIn</a></li>
+<a href="http://www.flickr.com/photos/jdkunesh/" title="">Flickr</a></li>
+<a href="https://medium.com/@jdkunesh" title="">Medium</a></li>
+<a href="ttps://www.instagram.com/jdkunesh/" title="">Instagram</a></li>
+<a href="https://www.facebook.com/jdkunesh" title="">Facebook</a></li>
+<a href="http://vimeo.com/jdkunesh" title="">Vimeo</a></li>
+<a href="http://vimeo.com/jdkunesh" title="">Vimeo</a></li>
+</p>
+{% endcomment %}
