--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ layout: default
 <li><a href="https://medium.com/@jdkunesh" title="">Medium</a></li>
 <li><a href="http://www.flickr.com/photos/jdkunesh/" title="">Flickr</a></li>
 <li><a href="http://www.twitter.com/jdkunesh/" title="">Twitter</a></li>
-<li><a href="ttps://www.instagram.com/jdkunesh/" title="">Instagram</a></li>
+<li><a href="https://www.instagram.com/jdkunesh/" title="">Instagram</a></li>
 <li><a href="https://www.facebook.com/jdkunesh" title="">Facebook</a></li>
-<li><a href="http://www.linkedin.com/in/jasonkunesh/" title="">LinkedIn</a></li>
+<li><a href="http://www.linkedin.com/in/jdkunesh/" title="">LinkedIn</a></li>
 <li><a href="http://vimeo.com/jdkunesh" title="">Vimeo</a></li>
 </ul>
 {% comment %}
