--- a/index.html
+++ b/index.html
@@ -7,20 +7,16 @@ layout: default
 <!-- <p>{{ site.description }}</p> -->
 {% endcomment %}
 
-<p>I design products to move humanity forward.</p>
-<p>Like all of us, I tell stories with <a href="https://medium.com/@jdkunesh" title="">words</a>, pictures (<a href="http://www.flickr.com/photos/jdkunesh/" title="">here</a> and <a href="https://www.instagram.com/jdkunesh/" title="">here</a>), and products.</p>
+<p>Hi, I'm Jason.</p>
 
-<p>I've been fortunate to <a href="https://publicgood.com" title="Public Good Software">empower a new generation to connect with nonprofits through the media</a>, <a href="https://www.barackobama.com" title="Obama for America 2012">re-elect the President of the United States</a>, and <a href="https://www.healthvault.com/us/en" title="Mayo Clinic Health Manager by Microsoft">help families raise healthy</a>, <a href="http://www.leapfrog.com/en-us/home" title="LeapFrog educational toys">smart children</a> in <a href="http://dalailamacenter.org/heart-mind-2013-helping-children-thrive/test-landing-page/about-heart-mind-conference" title="Dalai Lama Center &amp; UX for Good">empathy-driven</a> <a href="http://www.cutgroup.org" title="Smart Chicago Civic Usability Testing Group">civic institutions</a>. I've also helped you buy <a href="https://www.orbitz.com" title="Orbitz">airline tickets</a>, <a href="https://www.groupon.com/" title="Groupon">spa days</a>, <a href="https://www.threadless.com" title="Threadless">t-shirts</a>, and <a href="https://www.fieldmuseum.org" title="The Field Museum">museum memberships</a>.</p>
-<p>I've founded companies, disrupted industries, and taught at universities. I've bullshitted in board rooms, sung for my supper, and bounced at bars.</p>
+<p>I've founded companies, disrupted industries, and taught at universities, I've told tall tales by campfires, opined in board rooms, and sung for my supper.</p>
 <p>I'm at my best when rolling up my sleeves with high performing teams to find simple, people-centered technology solutions to intractable problems at scale.</p>
-<p>Here's how to get in touch. Thanks for stopping by.</p>
+<p>I go by jdkunesh on most digital services. Thanks for stopping by.</p>
 <ul>
 <li><a href="https://github.com/jdkunesh/" title="">Github</a></li>
 <li><a href="https://medium.com/@jdkunesh" title="">Medium</a></li>
 <li><a href="http://www.flickr.com/photos/jdkunesh/" title="">Flickr</a></li>
 <li><a href="http://www.twitter.com/jdkunesh/" title="">Twitter</a></li>
-<li><a href="https://www.instagram.com/jdkunesh/" title="">Instagram</a></li>
-<li><a href="https://www.facebook.com/jdkunesh" title="">Facebook</a></li>
 <li><a href="http://www.linkedin.com/in/jdkunesh/" title="">LinkedIn</a></li>
 <li><a href="http://vimeo.com/jdkunesh" title="">Vimeo</a></li>
 </ul>
