first pass at v1.0 for 2020. Seems weird to type it.

--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>Information not found</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>I'm sorry, but that page could not be found. Please [try our home page](https://jdkunesh.com/).</p>
+  <p><i>In internet speak, this is known as a 404.</i></p>
 </div>
