--- a/work/chicago.html
+++ b/work/chicago.html
@@ -7,5 +7,5 @@ filename: chicago.html
 
 # {{page.title}}
 
-{% assign item = site.data.portfolio | where: "name", "City of Chicago" %}
+{% assign item = site.data.work | where: "name", "City of Chicago" %}
 
