attempting new paths

--- a/work/311.html
+++ b/work/311.html
@@ -1,11 +1,11 @@
 ---
 title: 311
 layout: case
-permalink: /311/
+permalink: /work/311/
 filename: 311.html
 ---
 
-{% assign item = site.data.portfolio | where: "name", "City of Chicago" %}
+{% assign item = site.data.work | where: "name", "City of Chicago" %}
 
 
 {% include case.html %}
