evolution of navigation and content support

--- a/work/chicago.html
+++ b/work/chicago.html
@@ -1,11 +1,8 @@
 ---
 title: City of Chicago
-layout: case
+layout: page
 permalink: /work/chicago/
 filename: chicago.html
 ---
 
-# {{page.title}}
-
-{% assign item = site.data.work | where: "name", "City of Chicago" %}
-
+{% include era.html %}
