--- a/work/index.html
+++ b/work/index.html
@@ -5,13 +5,11 @@ layout: default
 
 ---
 
-
-
 <div class="card-deck">
       {% for item in site.data.work %}
         <a href="{{ site.baseurl }}{{ item.url }}">
           <div class="card card-home">
-            <img src="{{ item.image }}" alt="{{ item.alt_text }}"/>
+            <img src="{{ item.image }}" alt="{{ item.alt_text }}" width="50%"/>
             <div class="card-body">
                 <h2>{{ item.name }}</h2>
             </div>
