--- a/work/311.html
+++ b/work/311.html
@@ -1,11 +1,8 @@
 ---
-title: 311
+title: 311 Modernization
 layout: case
 permalink: /work/311/
 filename: 311.html
 ---
-
-{% assign item = site.data.work | where: "name", "City of Chicago" %}
-
 
 {% include case.html %}
