index and era ok, case next

--- a/work/index.html
+++ b/work/index.html
@@ -11,7 +11,7 @@ layout: default
           <div class="card card-home">
             <img src="{{ item.image }}" alt="{{ item.alt_text }}" width="50%"/>
             <div class="card-body">
-                <h2>{{ item.name }}</h2>
+                <h2>{{ item.title }}</h2>
             </div>
           </div>
         </a>
