--- a/work/etc.html
+++ b/work/etc.html
@@ -5,5 +5,5 @@ permalink: /work/etc/
 filename: etc.html
 ---
 
-{% assign case = site.data.work[5] %}
+{% assign era = site.data.work[5] %}
 {% include era.html %}
