--- a/work/fm.html
+++ b/work/fm.html
@@ -5,5 +5,5 @@ permalink: /work/fm/
 filename: fm.html
 ---
 
-{% assign case = site.data.work[3] %}
+{% assign era = site.data.work[3] %}
 {% include era.html %}
