--- a/work/ofa.html
+++ b/work/ofa.html
@@ -5,5 +5,5 @@ permalink: /work/ofa/
 filename: ofa.html
 ---
 
-{% assign case = site.data.work[2] %}
+{% assign era = site.data.work[2] %}
 {% include era.html %}
