--- a/work/orbitz.html
+++ b/work/orbitz.html
@@ -5,5 +5,5 @@ permalink: /work/orbitz/
 filename: orbitz.html
 ---
 
-{% assign case = site.data.work[4] %}
+{% assign era = site.data.work[4] %}
 {% include era.html %}
