--- a/work/publicgood.html
+++ b/work/publicgood.html
@@ -5,5 +5,5 @@ permalink: /work/publicgood/
 filename: publicgood.html
 ---
 
-{% assign case = site.data.work[1] %}
+{% assign era = site.data.work[1] %}
 {% include era.html %}
