sideways navigation for eras

--- a/work/chicago.html
+++ b/work/chicago.html
@@ -4,6 +4,7 @@ layout: era
 permalink: /work/chicago/
 filename: chicago.html
 ---
-
-{% assign era = site.data.work[0] %}
+{% assign current_index = 0 %}
+{% assign next_index = 1 %}
+{% assign previous_index = 5 %}
 {% include era.html %}
