--- a/work/fm.html
+++ b/work/fm.html
@@ -4,6 +4,7 @@ layout: era
 permalink: /work/fm/
 filename: fm.html
 ---
-
-{% assign era = site.data.work[3] %}
+{% assign current_index = 3 %}
+{% assign next_index = 4 %}
+{% assign previous_index = 2 %}
 {% include era.html %}
