--- a/work/orbitz.html
+++ b/work/orbitz.html
@@ -4,6 +4,7 @@ layout: era
 permalink: /work/orbitz/
 filename: orbitz.html
 ---
-
-{% assign era = site.data.work[4] %}
+{% assign current_index = 4 %}
+{% assign next_index = 5 %}
+{% assign previous_index = 3 %}
 {% include era.html %}
