--- a/work/publicgood.html
+++ b/work/publicgood.html
@@ -4,6 +4,7 @@ layout: era
 permalink: /work/publicgood/
 filename: publicgood.html
 ---
-
-{% assign era = site.data.work[1] %}
+{% assign current_index = 1 %}
+{% assign next_index = 2 %}
+{% assign previous_index = 0 %}
 {% include era.html %}
