--- a/work/etc.html
+++ b/work/etc.html
@@ -1,9 +1,10 @@
 ---
-title: etc.
-layout: page
+title: Etc.
+layout: era
 permalink: /work/etc/
 filename: etc.html
 ---
-
-{% assign era = site.data.work[5] %}
+{% assign current_index = 5 %}
+{% assign next_index = 0 %}
+{% assign previous_index = 4 %}
 {% include era.html %}
