--- a/work/ofa.html
+++ b/work/ofa.html
@@ -4,6 +4,7 @@ layout: era
 permalink: /work/ofa/
 filename: ofa.html
 ---
-
-{% assign era = site.data.work[2] %}
+{% assign current_index = 2 %}
+{% assign next_index = 3 %}
+{% assign previous_index = 1 %}
 {% include era.html %}
