--- a/work/311.html
+++ b/work/311.html
@@ -5,6 +5,8 @@ layout: case
 permalink: /work/311/
 filename: 311.html
 ---
-
-{% assign case = site.data.work[0].cases[0] %}
+{% assign work_index = 0 %}
+{% assign case_index = 0 %}
+{% assign next_index = 1 %}
+{% assign previous_index = 2 %}
 {% include case.html %}
