--- a/work/cds.html
+++ b/work/cds.html
@@ -5,6 +5,8 @@ layout: case
 permalink: /work/cds/
 filename: cds.html
 ---
-
-{% assign case = site.data.work[0].cases[1] %}
+{% assign work_index = 0 %}
+{% assign case_index = 1 %}
+{% assign next_index = 2 %}
+{% assign previous_index = 0 %}
 {% include case.html %}
