--- a/work/desops.html
+++ b/work/desops.html
@@ -5,6 +5,8 @@ layout: case
 permalink: /work/desops/
 filename: desops.html
 ---
-
-{% assign case = site.data.work[0].cases[2] %}
+{% assign work_index = 0 %}
+{% assign case_index = 2 %}
+{% assign next_index = 0 %}
+{% assign previous_index = 1 %}
 {% include case.html %}
