--- a/work/desops.html
+++ b/work/desops.html
@@ -1,7 +1,7 @@
 ---
 title: Design Operations
 era: City of Chicago
-layout: case
+layout: default
 permalink: /work/desops/
 filename: desops.html
 ---
