--- a/work/cds.html
+++ b/work/cds.html
@@ -1,7 +1,7 @@
 ---
 title: Chicago Design System
 era: City of Chicago
-layout: default
+layout: page
 permalink: /work/cds/
 filename: cds.html
 ---
