--- a/work/index.html
+++ b/work/index.html
@@ -2,17 +2,9 @@
 title: Work
 layout: home
 ---
-
-<div class="card-deck">
 {% for item in site.data.work %}
-  <a href="{{ site.baseurl }}{{ item.url }}">
-    <div class="card card-home">
-      <img src="{{ item.image }}" alt="{{ item.alt_text }}" width="50%"/>
-      <div class="card-body">
-          <h2>{{ item.title }}</h2>
-      </div>
-    </div>
-  </a>
+<a href="{{ site.baseurl }}{{ item.url }}">
+  <img src="{{ item.image }}" alt="{{ item.alt_text }}" class="pure-img" />
+      <h2>{{ item.title }}</h2>
+</a>
 {% endfor %}
-</div>
-
