--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Jason Kunesh's CyberPalace
  {% for item in site.data.work %}
  
     <a href="{{ site.baseurl }}{{ item.url }}">
-    <img src="{{ item.image }}" alt="{{ item.alt_text }}" class="pure-img" />
+    <img src="{{ item.image }}" alt="{{ item.alt_text }}" />
     <h2>{{ item.title }}</h2>
     </a>
 {% endfor %}
