converting to the new world order

--- a/work/ofa.html
+++ b/work/ofa.html
@@ -4,7 +4,7 @@ layout: case
 permalink: /work/ofa/
 filename: ofa.html
 ---
-{% assign current_index = 2 %}
-{% assign next_index = 3 %}
-{% assign previous_index = 1 %}
-{% include era.html %}
+{% assign previous_index = 3 %}
+{% assign current_index = 4 %}
+{% assign next_index = 5 %}
+{% include case.html %}
