--- a/work/etc.html
+++ b/work/etc.html
@@ -7,4 +7,4 @@ filename: etc.html
 {% assign current_index = 5 %}
 {% assign next_index = 0 %}
 {% assign previous_index = 4 %}
-{% include era.html %}
+{% include case.html %}
