--- a/work/fm.html
+++ b/work/fm.html
@@ -4,7 +4,7 @@ layout: case
 permalink: /work/fm/
 filename: fm.html
 ---
-{% assign current_index = 3 %}
-{% assign next_index = 4 %}
-{% assign previous_index = 2 %}
-{% include era.html %}
+{% assign previous_index = 5 %}
+{% assign current_index = 6 %}
+{% assign next_index = 7 %}
+{% include case.html %}
