--- a/work/orbitz.html
+++ b/work/orbitz.html
@@ -4,7 +4,7 @@ layout: case
 permalink: /work/orbitz/
 filename: orbitz.html
 ---
+{% assign previous_index = 3 %}
 {% assign current_index = 4 %}
 {% assign next_index = 5 %}
-{% assign previous_index = 3 %}
-{% include era.html %}
+{% include case.html %}
