--- a/work/publicgood.html
+++ b/work/publicgood.html
@@ -4,9 +4,7 @@ layout: case
 permalink: /work/publicgood/
 filename: publicgood.html
 ---
-
-
-{% assign current_index = 1 %}
-{% assign next_index = 2 %}
-{% assign previous_index = 0 %}
-{% include era.html %}
+{% assign previous_index = 3 %}
+{% assign current_index = 4 %}
+{% assign next_index = 5 %}
+{% include case.html %}
