attempting to upload

--- a/work/etc.html
+++ b/work/etc.html
@@ -1,10 +1,10 @@
 ---
-title: Etc.
+title: Everything Else
 layout: case
 permalink: /work/etc/
 filename: etc.html
 ---
-{% assign current_index = 5 %}
+{% assign previous_index = 8 %}
+{% assign current_index = 9 %}
 {% assign next_index = 0 %}
-{% assign previous_index = 4 %}
 {% include case.html %}
