--- a/work/nyp.html
+++ b/work/nyp.html
@@ -1,8 +1,8 @@
 ---
-title: Fuzzy Math
+title: MyNYP
 layout: case
-permalink: /work/fm/
-filename: fm.html
+permalink: /work/nyp/
+filename: nyp.html
 ---
 {% assign previous_index = 5 %}
 {% assign current_index = 6 %}
