--- a/work/nyp.html
+++ b/work/nyp.html
@@ -4,7 +4,7 @@ layout: case
 permalink: /work/nyp/
 filename: nyp.html
 ---
-{% assign previous_index = 5 %}
-{% assign current_index = 6 %}
-{% assign next_index = 7 %}
+{% assign previous_index = 4 %}
+{% assign case_index = 5 %}
+{% assign next_index = 6 %}
 {% include case.html %}
