--- a/work/ofa.html
+++ b/work/ofa.html
@@ -4,7 +4,7 @@ layout: case
 permalink: /work/ofa/
 filename: ofa.html
 ---
-{% assign previous_index = 3 %}
-{% assign current_index = 4 %}
-{% assign next_index = 5 %}
+{% assign previous_index = 2 %}
+{% assign case_index = 3 %}
+{% assign next_index = 4 %}
 {% include case.html %}
