--- a/work/ofa2.html
+++ b/work/ofa2.html
@@ -4,7 +4,7 @@ layout: case
 permalink: /work/ofa2/
 filename: ofa2.html
 ---
-{% assign previous_index = 4 %}
-{% assign current_index = 5 %}
-{% assign next_index = 6 %}
+{% assign previous_index = 3 %}
+{% assign case_index = 4 %}
+{% assign next_index = 5 %}
 {% include case.html %}
