--- a/work/orbitz.html
+++ b/work/orbitz.html
@@ -3,7 +3,7 @@ layout: case
 permalink: /work/orbitz/
 filename: orbitz.html
 ---
-{% assign previous_index = 7 %}
-{% assign current_index = 8 %}
-{% assign next_index = 9 %}
+{% assign previous_index = 6 %}
+{% assign case_index = 7 %}
+{% assign next_index = 8 %}
 {% include case.html %}
