--- a/work/threadless.html
+++ b/work/threadless.html
@@ -4,7 +4,7 @@ layout: case
 permalink: /work/threadless/
 filename: threadless.html
 ---
-{% assign previous_index = 6 %}
-{% assign current_index = 7 %}
-{% assign next_index = 8 %}
+{% assign previous_index = 5 %}
+{% assign case_index = 6 %}
+{% assign next_index = 7 %}
 {% include case.html %}
