cleaning cleaning cleaning

--- a/work/desops.html
+++ b/work/desops.html
@@ -3,5 +3,7 @@ layout: case
 permalink: /work/desops/
 filename: desops.html
 ---
+{% assign prev_ovr_index = 1 %}
+{% assign next_ovr_index = 8 %}
 {% assign case_index = 2 %}
 {% include case.html %}
