--- a/work/etc.html
+++ b/work/etc.html
@@ -4,5 +4,7 @@ layout: case
 permalink: /work/etc/
 filename: etc.html
 ---
+{% assign prev_ovr_index = 2 %}
+{% assign next_ovr_index = 0 %}
 {% assign case_index = 8 %}
 {% include case.html %}
