--- a/index.html
+++ b/index.html
@@ -5,27 +5,38 @@ title: Jason Kunesh's CyberPalace
 
 ---
 <grid columns="8">
-<c span="1-2"></c>
-<c span="3-6">
-    <h2>Howdy!</h2>
-    <p>inspirational statement like a book cover</p>
+<c></c>
+<c span="2-7">
+    <h2>Welcome!</h2>
     <p>lover's quarrel with tech: design, biz, code intersection.</p>
+
+<p>I am the Design Director for the City of Chicago, making the City work better for residents, visitors, and businesses by building awareness and usage of digital information and services designed with the community like [311](https://311.chicago.gov/) and the [Chicago Design System](https://chicagodesignsystem.org/).</p>
+
+<p>I am the first person in this role. I have had the privilege of saying that pretty often in my career as I've progressed from programming to design to product leadership. I have worked in all sorts of market sectors with acronyms like B2B/B2C/G2B/G2C/B2G/C2G and C2C Whew, I think that's all of 'em, often on either side of the table. Most of the time it's worked out pretty great.</p>
+
 </c>
 <c span="7-8"></c>
+</grid>
+<grid columns="8">
+<c span="1-5"></c>
+<c span="7-8">
+<p>&#8212;<a href="{{ site.baseurl }}/">{{ site.title }}</a></p>
+</c>
 <c></c>
 </grid>
+
 <grid columns="8">
 <c></c>
 
 {% for item in site.data.work %}
 
  <c span="{% cycle 2, 4, 6 %}+2">
-    <a href="{{ site.baseurl }}{{ item.url }}">
+{% if item.live %} <a href="{{ site.baseurl }}{{ item.url }}"> {% endif %}
     <div class="card">
-    <img src="{{ item.image }}" alt="{{ item.alt_text }}" class="" />
-    <h2>{{ item.title }}</h2>
+    <img src="{{ item.image }}" alt="{{ item.alt_text }}"{% if item.live == false %} class="dead"{% endif %} />
+    <p>{{ item.title }}</p>
     </div>
-    </a>
+{% if item.live %} </a> {% endif %}
 </c>
 {% assign test = forloop.index | modulo:3 %}
 {% if test == 0 %}
@@ -38,8 +49,6 @@ title: Jason Kunesh's CyberPalace
 {% endfor %}
 <c></c>
 </grid>
-<!-- 
-
 <grid columns="8">
 <c></c>
 <c span="2+2"></c>
@@ -60,4 +69,3 @@ title: Jason Kunesh's CyberPalace
 <c span=""></c>
 <c span=""></c>
 </grid>
- -->
