--- a/work/311.html
+++ b/work/311.html
@@ -3,5 +3,7 @@ layout: case
 permalink: /work/311/
 filename: 311.html
 ---
+{% assign prev_ovr_index = 0 %}
+{% assign next_ovr_index = 2 %}
 {% assign case_index = 1 %}
 {% include case.html %}
