--- a/work/cds.html
+++ b/work/cds.html
@@ -3,5 +3,7 @@ layout: case
 permalink: /work/cds/
 filename: cds.html
 ---
+{% assign prev_ovr_index = 8 %}
+{% assign next_ovr_index = 1 %}
 {% assign case_index = 0 %}
 {% include case.html %}
