content to templates

--- a/work/msft.html
+++ b/work/msft.html
@@ -1,8 +1,7 @@
 ---
-title: MyNYP
 layout: case
-permalink: /work/nyp/
-filename: nyp.html
+permalink: /work/msft/
+filename: msft.html
 ---
 {% assign case_index = 5 %}
 {% include case.html %}
