--- a/index.html
+++ b/index.html
@@ -6,31 +6,20 @@ title: Jason Kunesh's CyberPalace
 ---
 <grid columns="8" columns-s="1">
 <c></c>
-<c span="2-7">
-    <h2>Welcome!</h2>
-
-<p>Hi–</p>
-
+<c span="2-4" span-s="row">
+<h2>Welcome!</h2>
 <p>Currently, I am the Design Director for the City of Chicago, making the City work better for residents, visitors, and businesses by building awareness and usage of digital information and services designed with the community like <a href="https://311.chicago.gov/">311</a> and the <a href="https://design.chicago.gov/">Chicago Design System</a>.</p>
-
-<p>I'm open to user experience, product, or design roles as a consultant, speaker, advisor, or team member. I'm interested in making products to transform customers and grow positive brands and products at scale.</p>
-</c>
-<c span="7-8"></c>
-</grid>
-<grid columns="8">
-<c span="1-5"></c>
-<c span="7-8">
+<p>I am open to user experience, product, or design roles as a consultant, speaker, advisor, or team member. I love making products to transform customers and grow positive brands and products at scale.</p>
 <p>&#8212;<a href="{{ site.baseurl }}/">{{ site.title }}</a></p>
 </c>
+<c span="5-7" span-s="row">
+    <img src="/img/jdkunesh-headshot-medium.jpg" class="w-full" alt="A photo of Jason Kunesh" />
+</c>
 <c></c>
-</grid>
-
-<grid columns="8" columns-s="1">
 <c></c>
-
 {% for item in site.data.work %}
 <!-- {% cycle 2, 4, 6 %} -->
-<c span="2" class="h-12">
+<c span="2" class="h-12" span-s="row">
 <img src="{{ item.image }}" alt="{{ item.alt_text }}" class="w-full h-8 center {% if item.live == false %}dead{% endif %}" />
 {% if item.live %} <a href="{{ site.baseurl }}{{ item.url }}"> {% endif %}
 <p style="text-align: center;">{{ item.title }}</p>
@@ -39,17 +28,15 @@ title: Jason Kunesh's CyberPalace
 {% assign test = forloop.index | modulo:3 %}
 {% if test == 0 %}
 <c></c>
-</grid>
-<grid columns="8" columns-s="1">
 <c></c>
 {% endif %}
 
 {% endfor %}
 <c></c>
-</grid>
-<grid columns="8">
 <c></c>
-<c span="2+2"></c>
+</grid>
+
+<!-- <c span="2+2"></c>
 <c span="4+2"></c>
 <c span="6+2"></c>
 <c></c>
@@ -67,3 +54,4 @@ title: Jason Kunesh's CyberPalace
 <c span=""></c>
 <c span=""></c>
 </grid>
+ -->
