updated 404, marked pages draft

--- a/404.html
+++ b/404.html
@@ -1,25 +1,9 @@
 ---
 permalink: /404.html
-layout: default
+layout: page
+title: Information not found
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>Information not found</h1>
-
-  <p>I'm sorry, but that page could not be found. Please [try our home page](https://jdkunesh.com/).</p>
-  <p><i>In internet speak, this is known as a 404.</i></p>
-</div>
+<p>I'm sorry, but we don't have what you were hoping for. Life. It hurts somtimes. Please <a href="{{ site.baseurl }}" alt="">try our home page</a>
+for all your Kunesh-related needs.</p>
+<p><i>In internet speak, this is known as a 404.</i></p>
