--- a/work/etc.html
+++ b/work/etc.html
@@ -2,6 +2,7 @@
 layout: case
 permalink: /work/etc/
 filename: etc.html
+published: false
 ---
 {% assign prev_ovr_index = 2 %}
 {% assign next_ovr_index = 0 %}
