--- a/work/ofa2.html
+++ b/work/ofa2.html
@@ -2,6 +2,7 @@
 layout: case
 permalink: /work/ofa2/
 filename: ofa2.html
+published: false
 ---
 {% assign case_index = 4 %}
 {% include case.html %}
