--- a/work/orbitz.html
+++ b/work/orbitz.html
@@ -2,6 +2,7 @@
 layout: case
 permalink: /work/orbitz/
 filename: orbitz.html
+published: false
 ---
 {% assign case_index = 7 %}
 {% include case.html %}
