--- a/work/msft.html
+++ b/work/msft.html
@@ -2,6 +2,7 @@
 layout: case
 permalink: /work/msft/
 filename: msft.html
+published: false
 ---
 {% assign case_index = 5 %}
 {% include case.html %}
