--- a/work/ofa.html
+++ b/work/ofa.html
@@ -2,6 +2,7 @@
 layout: case
 permalink: /work/ofa/
 filename: ofa.html
+published: false
 ---
 {% assign case_index = 3 %}
 {% include case.html %}
