--- a/work/threadless.html
+++ b/work/threadless.html
@@ -2,6 +2,7 @@
 layout: case
 permalink: /work/threadless/
 filename: threadless.html
+published: false
 ---
 {% assign case_index = 6 %}
 {% include case.html %}
