--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@ layout: page
 title: Information not found
 ---
 
-<p>I'm sorry, but we don't have what you were hoping for. Life. It hurts somtimes. Please <a href="{{ site.baseurl }}" alt="">try our home page</a>
+<p>I'm sorry, but we don't have that for which you were hoping.</p>
+<p>Life. It can be so sweet, but not this time right here.</p>
+<p>Please <a href="{{ site.baseurl }}" alt="">try our home page</a>
 for all your Kunesh-related needs.</p>
-<p><i>In internet speak, this is known as a 404.</i></p>
+<p><i>In <a href="https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol">hypertext transfer protocol</a> codes, this is known as a <a href="https://en.wikipedia.org/wiki/HTTP_404">404 (not found) error</a>.</i></p>
