--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Jason Kunesh's CyberPalace
 <c span="2" class="h-12" span-s="row">
 <img src="{{ item.image }}" alt="{{ item.alt_text }}" class="w-full h-8 center {% if item.live == false %}dead opacity5{% endif %}" />
 {% if item.live %} <a href="{{ site.baseurl }}{{ item.url }}"> {% endif %}
-<p style="text-align: center;">{{ item.title }}</p>
+<p style="text-align: center;" class="{% if item.live == false %}opacity5{% endif %}">{{ item.title }}</p>
 {% if item.live %} </a> {% endif %}
 </c>
 {% assign test = forloop.index | modulo:3 %}
