--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ layout: home
 <c></c>
 <c span="2-4" span-s="row">
 <h2>Welcome!</h2>
-<p>I'm Jason, a designer with an insatiable curiosity locked in a lover's quarrel with technology. I like spending my time helping people make things on the internet, playing music, or reading.</p>
+<p>I'm Jason, a designer with an insatiable curiosity locked in a lover's quarrel with technology. I like spending my time making things on the internet or in real life, playing music, and reading.</p>
 <p>I am the Design Director for the City of Chicago, making the City work better for residents, visitors, and businesses by building awareness and usage of digital information and services designed with the community like <a href="https://311.chicago.gov/">311</a> and the <a href="https://design.chicago.gov/">Chicago Design System</a>.</p>
-<p>I am open to user experience, product, or design roles as a consultant, speaker, advisor, or team member. I love making products to transform customers and grow positive brands and products at scale.</p>
+<p>I am open to user experience, product, or design roles as a consultant, speaker, advisor, or team member. I love building teams to transform customers and grow positive brands and products at scale.</p>
 <p>&#8212;<a href="{{ site.baseurl }}/">{{ site.title }}</a></p>
 </c>
 <c span="5-7" span-s="row">
