--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@ layout: home
     <img src="/img/jdkunesh-headshot-medium.jpg" class="w-full" alt="A photo of Jason Kunesh" />
 </c>
 <c></c>
-<!-- <c></c>
-<c span="2-7" span-s="row">
-<h2>Work</h2>
+<c span="row" span-s="row">
+<hr>  
 </c>
 <c></c>
- --><c></c>
+<c span="2-7" span-s="row">
+<h2>Selected Work</h2>
+</c>
+<c></c>
+<c></c>
 {% for item in site.data.work %}
 <!-- {% cycle 2, 4, 6 %} -->
-<c span="2" class="h-12" span-s="row">
+<c span="2" span-s="row">
 <img src="{{ item.image }}" alt="{{ item.alt_text }}" class="w-full h-8 center {% if item.live == false %}dead opacity5{% endif %}" />
 {% if item.live %} <a href="{{ site.baseurl }}{{ item.url }}"> {% endif %}
 <p style="text-align: center;" class="{% if item.live == false %}opacity5{% endif %}">{{ item.title }}</p>
