--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ layout: home
 
 ---
 <grid columns="8" columns-s="1">
+<c span="row" span-s="row">
+<img src="/img/sunrise-over-lake-michigan.jpg" alt="Sunrise over Lake Michigan, Summer 2018." class="w-full" />
+</c>
 <c></c>
 <c span="2.." span-s="row">
     <h2>Welcome!</h2>
@@ -46,23 +49,3 @@ layout: home
 <c></c>
 <c></c>
 </grid>
-
-<!-- <c span="2+2"></c>
-<c span="4+2"></c>
-<c span="6+2"></c>
-<c></c>
-</grid>
-<grid columns="8">
-<c></c>
-<c span="2+2"></c>
-<c span="4+2"></c>
-<c span="6+2"></c>
-<c></c>
-</grid>
-<grid columns="8">
-<c span=""></c>
-<c span=""></c>
-<c span=""></c>
-<c span=""></c>
-</grid>
- -->
