style tweaks and cleanup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
 </c>
 <c></c>
 <c span="2.." span-s="row">
-    <h2>Welcome!</h2>
+    <h2>Hello-</h2>
 </c>
 <c></c>
 <c span="2-4" span-s="row">
