--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: home
 </c>
 <c></c>
 <c span="row" span-s="row">
-<hr>  
+<hr class="opacity3">  
 </c>
 <c></c>
 <c span="2-7" span-s="row">
