--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@ layout: home
 <c span="row" span-s="row">
 <img src="/img/sunrise-over-lake-michigan.jpg" alt="Sunrise over Lake Michigan, Summer 2018." class="w-full" />
 </c>
+<c span="row" span-s="row">
+<hr class="opacity3">  
+</c>
 <c></c>
 <c span="2.." span-s="row">
-    <h2>Hello-</h2>
+    <h2>Hello</h2>
 </c>
 <c></c>
 <c span="2-4" span-s="row">
@@ -23,11 +26,8 @@ layout: home
     <img src="/img/jdkunesh-headshot-medium.jpg" class="w-full" alt="A photo of Jason Kunesh" />
 </c>
 <c></c>
-<c span="row" span-s="row">
-<hr class="opacity3">  
-</c>
 <c></c>
-<c span="2-7" span-s="row">
+<c span="2-7" span-s="row" style="padding-top:3em;">
 <h2>Selected Work</h2>
 </c>
 <c></c>
