--- a/index.html
+++ b/index.html
@@ -49,4 +49,26 @@ layout: home
 {% endfor %}
 <c></c>
 <c></c>
+<c></c>
+<c span="2-7" span-s="row" style="padding-top:3em;">
+{% comment %}
+    <h2>Speaking</h2>
+    {% for event in site.data.events %}
+    <ul>
+     <li><a href="{{event.url}}">{{ event.title }} - {{event.event}}</a></li>
+    </ul>
+    {% endfor %}
+    </c>
+    <c></c>
+    <c></c>
+    <c span="2-7" span-s="row" style="padding-top:3em;">
+    <h2>Press</h2>
+    {% for article in site.data.press %}
+    <ul>
+     <li><a href="{{article.url}}">{{ article.title }}</a> {{article.description}}</li>
+    </ul>
+    {% endfor %}
+{% endcomment %}
+</c>
+<c></c>
 </grid>
