--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@ layout: home
 <c></c>
 <c span="2-7" span-s="row" style="padding-top:3em;">
     <h2>Speaking</h2>
-    <p>I am available for speaking engagements, and love listening as much as sharing. Get in touch at <a href="mailto://speaking@jdkunesh.com?subject=speaking+inquiry">speaking@jdkunesh.com</a>.</p>
-    <p><b>Next up:</b> I'm excited to be speaking at <a href="https://config.figma.com">Figma's Inaugural Config Conference</a> February 6th in San Francisco.</p>
+    <p>I am available for speaking engagements. Get in touch at <a href="mailto://speaking@jdkunesh.com?subject=speaking+inquiry">speaking@jdkunesh.com</a>.</p>
+    <h4>Next up</h4>
+    <p>I'm excited to be speaking at <a href="https://config.figma.com">Figma's Inaugural Config Conference</a> February 6th in San Francisco.</p>
 {% comment %}
     {% for event in site.data.events %}
     <ul>
