basic updates and federal resume

--- a/work/cds.html
+++ b/work/cds.html
@@ -2,6 +2,8 @@
 layout: case
 permalink: /work/cds/
 filename: cds.html
+published: false
+
 ---
 {% assign prev_ovr_index = 0 %}
 {% assign next_ovr_index = 2 %}
