--- a/work/desops.html
+++ b/work/desops.html
@@ -2,6 +2,8 @@
 layout: case
 permalink: /work/desops/
 filename: desops.html
+published: false
+
 ---
 {% assign prev_ovr_index = 1 %}
 {% assign next_ovr_index = 0 %}
