--- a/work/311.html
+++ b/work/311.html
@@ -2,6 +2,8 @@
 layout: case
 permalink: /work/311/
 filename: 311.html
+published: false
+
 ---
 {% assign prev_ovr_index = 2 %}
 {% assign next_ovr_index = 1 %}
