updated description and rendering thereof

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
 ---
 <grid columns="8" columns-s="1">
 <c span="row" span-s="row">
-<img src="/img/sunrise-over-lake-michigan.jpg" alt="Sunrise over Lake Michigan, Summer 2018." class="w-full" />
+<img src="{{ site.image_main }}" alt="Sunrise over Lake Michigan, Summer 2018." class="w-full" />
 </c>
 <c span="row" span-s="row">
 <hr class="opacity3">  
